# echo-server

./: README.md  makefile
.github/workflows/: ci.yml
echo-client/: .dockerignore  Cargo.toml  Dockerfile
echo-client/src/: main.rs
echo-server/: Cargo.toml  Dockerfile  test.stuff
echo-server/src/: main.rs
k8s/echo-client/: kustomization.yml
k8s/echo-client/base/: deployment.yml  kustomization.yml
k8s/echo-client/overlays/prod/: kustomization.yml
k8s/echo-server/: kustomization.yml
k8s/echo-server/base/: deployment.yml  kustomization.yml
k8s/echo-server/overlays/prod/: kustomization.yml
k8s/echo-server/overlays/stage/: kustomization.yml
k8s/k8s-test/echo-client/base/: deployment.yml
k8s/k8s-test/echo-client/overlays/stage/: kustomization.yml
k8s/k8s-test/echo-server/base/: config-map.yml  ingress.yml  kustomization.yml  secret.yml
